# TP-LSD

./: .gitignore  README.md  demo_line.py  test.py
Metrics/LAP/: README.md  _init_paths.py  cal_LAP.py  mat2txt.py  mat2txt_pred.py  sample_from_npz.py
Metrics/LAP/TP-LSD/wire/: 00031591.txt  00031608.txt
Metrics/LAP/groundtruths_wire_line/: 00031591.txt  00031608.txt
Metrics/LAP/lib/: Evaluator_line.py  LineBox.py  LineBoxes.py  line_intersection.py  utils.py
Metrics/LAP/result/: TP-LSD-wire-0.5.npz
Metrics/PixelBased/: eval_line_folder.m  eval_wire.m  plot_result.py
Metrics/SAP/: README.md  eval_sAP_all_wire.py  eval_sAP_all_york.py
config/: test_config.py
dataset/: dataset.py
lbdmod/: CMakeLists.txt  README.md  main.cpp
lbdmod/cpp/include/: EmptyExtractor.h  EmptyMatcher.h  LBDFLoatOnlineExtractor.h  LBDFloatExtractor.h  LBDFloatLineMatcher.h  LLDExtractor.h  LLDLineMatcher.h  LineExtractor.h  LineMatcher.h  LinesConfigurator.h  StoredLineExtractor.h  dataconv.h  lbd_mod_funcs.h
lbdmod/cpp/include/lbdmod/: line_descriptor.hpp
lbdmod/cpp/include/lbdmod/line_descriptor/: descriptor.hpp
lbdmod/cpp/src/: EmptyExtractor.cc  EmptyMatcher.cc  LBDFLoatOnlineExtractor.cpp  LBDFloatExtractor.cc  LBDFloatLineMatcher.cc  LLDExtractor.cc  LLDLineMatcher.cc  LineExtractor.cc  LinesConfigurator.cc  StoredLineExtractor.cc  binary_descriptor.cpp  dataconv.cpp  draw.cpp  lbd_mod_funcs.cpp  precomp.hpp  python_module.cpp
modeling/: Hourglass.py  TP_Net.py  loss.py  official.py
modeling/DCNv2/: .gitignore  README.md  test.py
utils/: reconstruct.py  utils.py
